--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,27 +1,40 @@
-name: Node.js Express CI
-
-on: [push]
-
+name: Test-Build
+on:
+  push:
+    branches:
+      - master
 jobs:
-  build:
+  test-api:
     runs-on: ubuntu-latest
-
     steps:
+    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
-
-    - name: Install dependencies
-      run: npm install
-
-    - name: Build and start Express app
-    run: |
-      npm run build
-      npm start &
-      sleep 10 # Wait for server to start
-
-    - name: Wait for server to start
-      run: sleep 10
-
-    - name: Run Postman tests
+      
+    # INstall Node on the runner
+    - name: Install Node
+      uses: actions/setup-node@v1
+      with: 
+        node-version: '12.x'
+    
+    # Install the newman command line utility and also install the html extra reporter
+    - name: Install newman
       run: |
-        npm install -g newman
-        newman run test-collection.json
+       npm install -g newman
+       npm install -g newman-reporter-htmlextra
+
+    # Make directory to upload the test results
+    - name: Make Directory for results
+      run: mkdir -p testResults
+
+
+    # Run the POSTMAN collection
+    - name: Run POSTMAN collection
+      run: |
+       newman run ./test-collection.json -r htmlextra --reporter-htmlextra-export testResults/htmlreport.html --reporter-htmlextra-darkTheme  > testResults/runreport1.html
+
+    # Upload the contents of Test Results directory to workspace
+    - name: Output the run Details
+      uses: actions/upload-artifact@v2
+      with: 
+       name: RunReports
+       path: testResults
